# learning-encryption-tool

./: Cargo.toml  README.md  flake.nix
src/: cli.rs  lib.rs  main.rs
src/actions/: decrypt.rs  encrypt.rs  mod.rs  show.rs
src/crypto/: chunked.rs  decrypt.rs  encrypt.rs  mod.rs  pbkdf.rs  random_bytes.rs
src/utils/: mod.rs  try_from_fn.rs
