[package]
name = "encryption-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10", features = ["heapless", "stream"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
getrandom = "0.2"
heapless = "0.7.6"
pbkdf2 = "0.12"
sha2 = "0.10"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typenum = "1"
okaywal = "0.3"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
hex = "0.4"
